--- a/test.ini
+++ b/test.ini
@@ -2,23 +2,29 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "moguravr_rss.xml"
+url = "https://www.moguravr.com/category/virtual-youtuber/feed/"
 max = "10"
-md5 = "cff9b3e6900fedc125967783f1678167"
-action = "auto"
+md5 = ""
+action = "ja->zh-CN"
 
 [source002]
-name = "mckinsey_iw_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "p2y_rss.xml"
+url = "https://p2y.jp/feed/"
 max = "10"
-md5 = "cff9b3e6900fedc125967783f1678167"
-action = "en->iw"
+md5 = ""
+action = "ja->zh-CN"
 
 [source003]
-name = "nature_rss.xml"
-url = "http://rss.acast.com/nature"
+name = "panora_rss.xml"
+url = "http://panora.tokyo/feed/"
 max = "10"
-md5 = "ea057624ae84dac78c47bbd9760d4860"
-action = "auto"
+md5 = ""
+action = "ja->zh-CN"
 
+[source004]
+name = "mangasokuhou_rss.xml"
+url = "https://www.mangasokuhou.com/?feed=rss2"
+max = "10"
+md5 = ""
+action = "ja->zh-CN"
